# tinta

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CNAME  LICENSE  README.md  index.html  privacy.html  robots.txt  sitemap.xml
.github/workflows/: build.yml
include/: app.h  d2d_init.h  editor.h  markdown.h  mermaid.h  overlays.h  render.h  search.h  syntax.h  utils.h
packaging/msix/: AppxManifest.xml  README.md  pack.ps1
resources/: tinta.rc
src/: d2d_init.cpp  editor.cpp  input.cpp  main_d2d.cpp  markdown.cpp  mermaid.cpp  overlays.cpp  render.cpp  search.cpp  settings.cpp  syntax.cpp  themes.cpp  utils.cpp
tests/: document_tests.cpp  mermaid_tests.cpp
